// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render IssuesAppealsTable with items 1`] = `
<table
  class="AbcTable AbcTable_sticky AbcTable_border IssuesAppeals"
>
  <thead
    class="AbcTable-THead"
  >
    <tr
      class="AbcTable-Tr"
    >
      <th
        class="AbcTable-Th"
      >
        i18n:requester
      </th>
      <th
        class="AbcTable-Th"
      >
        i18n:service
      </th>
      <th
        class="AbcTable-Th"
      >
        i18n:issue
      </th>
      <th
        class="AbcTable-Th"
      >
        i18n:message
      </th>
      <th
        class="AbcTable-Th"
      >
        i18n:agreement
      </th>
    </tr>
  </thead>
  <tbody
    class="AbcTable-TBody"
  >
    <tr
      class="AbcTable-Tr"
    >
      <td
        class="AbcTable-Td"
      >
        <div />
      </td>
      <td
        class="AbcTable-Td"
      >
        <div>
          <a
            class="control link link_theme_normal"
            data-lego="react"
            href="/services/serviceSlug/"
            tabindex="0"
            target="_blank"
          >
            Имя сервиса
          </a>
        </div>
      </td>
      <td
        class="AbcTable-Td"
      >
        <div>
          Отсутствует описание
        </div>
      </td>
      <td
        class="AbcTable-Td"
      >
        <div
          class="IssuesAppeals-Message"
        >
          Не проблема
        </div>
      </td>
      <td
        class="AbcTable-Td"
      >
        <div>
          <div
            class="IssuesAppeals-Decisions"
          >
            <span
              class="Link Link_theme_pseudo IssuesAppeals-Decision-button"
            >
              <span
                class="icon icon_glyph_thumbs-up icon_size_s icon_has-glyph_yes"
                data-lego="react"
              >
                <span
                  class="ta-component awesome-icon awesome-icon_icon_thumbs-up"
                  data-lego="react"
                />
              </span>
            </span>
            <span
              class="Link Link_theme_pseudo IssuesAppeals-Decision-button"
            >
              <span
                class="icon icon_glyph_thumbs-down icon_size_s icon_has-glyph_yes"
                data-lego="react"
              >
                <span
                  class="ta-component awesome-icon awesome-icon_icon_thumbs-up"
                  data-lego="react"
                />
              </span>
            </span>
          </div>
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Should render IssuesAppealsTable without items 1`] = `
<div
  class="IssuesAppeals-NoAppeals"
>
  i18n:no-appeals
</div>
`;

exports[`Should render utils components for IssuesAppealsTable ServiceLink 1`] = `
<a
  class="control link link_theme_normal"
  data-lego="react"
  href="/services/serviceSlug/"
  tabindex="0"
  target="_blank"
>
  Имя сервиса
</a>
`;

exports[`Should render utils components for IssuesAppealsTable Wrapper 1`] = `
<div>
  <div />
</div>
`;

exports[`Should render utils components for IssuesAppealsTable Wrapper with className 1`] = `
<div
  class="content"
>
  <div />
</div>
`;
